--- a/public/posts/serverless-api-coding-model.mdx
+++ b/public/posts/serverless-api-coding-model.mdx
@@ -18,6 +18,7 @@ Serverless Offline provides HTTPS entry points to APIs, translates incoming requ
 npx sls offline \
   --useInProcess \
   --noPrependStageInUrl \
+  --noSponsor \
   --prefix 'investments' \
   --host '0.0.0.0' \
   --httpPort 446 \
