--- a/public/posts/serverless-api-coding-model.mdx
+++ b/public/posts/serverless-api-coding-model.mdx
@@ -258,8 +258,7 @@ If I need to debug the API's code, I use Visual Studio Code's debugging features
            "type": "node",
            "request": "attach",
            "name": "Attach to Serverless Offline",
-           "processId": "${command:PickProcess}",
-           "port": 446
+           "processId": "${command:PickProcess}"
        }
    ]
 }
