--- a/public/posts/serverless-api-coding-model.mdx
+++ b/public/posts/serverless-api-coding-model.mdx
@@ -269,7 +269,7 @@ If I need to debug the API's code, I use Visual Studio Code's debugging features
            "command": "shellCommand.execute",
            "args": {
                "command": "ps aux | grep [s]f-core.js | awk {'print $2'}",
-               "useFirstResult": true,
+               "useFirstResult": true
            }
        }
    ]
