--- a/public/posts/final-spa-overview.mdx
+++ b/public/posts/final-spa-overview.mdx
@@ -72,9 +72,9 @@ return (
             <>
                 <SessionView {...getSessionProps()} />
                 <Routes>
-                    <Route path='/companies/:id' element={<TransactionsContainer {...getTransactionsProps()} />} />
+                    <Route path='/companies/:id' element={<TransactionsView {...getTransactionsProps()} />} />
                     <Route path='/loggedout'     element={<LoginRequiredView {...getLoginRequiredProps()} />} />
-                    <Route path='/*'             element={<CompaniesContainer {...getCompaniesProps()} />} />
+                    <Route path='/*'             element={<CompaniesView {...getCompaniesProps()} />} />
                 </Routes>
             </>
         }
